RESOLVED FIXED302328
[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/css-sizing/block-image-percentage-max-height-inside-inline.html
https://bugs.webkit.org/show_bug.cgi?id=302328
Summary [blocks-in-inline] Fix imported/w3c/web-platform-tests/css/css-sizing/block-i...
alan
Reported 2025-11-11 07:42:39 PST
ssia
Attachments
[fast-cq]Patch (3.77 KB, patch)
2025-11-11 07:51 PST, alan
no flags
alan
Comment 1 2025-11-11 07:51:51 PST
Created attachment 477359 [details] [fast-cq]Patch
EWS
Comment 2 2025-11-11 12:50:39 PST
Committed 302858@main (a68c36d5cd0f): <https://commits.webkit.org/302858@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477359 [details].
Radar WebKit Bug Importer
Comment 3 2025-11-11 12:51:12 PST
Note You need to log in before you can comment on or make changes to this bug.