[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/css-sizing/block-image-percentage-max-height-inside-inline.html https://bugs.webkit.org/show_bug.cgi?id=302328

Reviewed by Antti Koivisto.

Let's set top/left for all block level elements (block level elements are not always block level containers (e.g. img)).

Test: fast/inline/blocks-in-inline-layout-image-as-block.html

* LayoutTests/fast/inline/blocks-in-inline-layout-image-as-block-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-layout-image-as-block.html: Added.
* Source/WebCore/layout/integration/LayoutIntegrationFormattingContextLayout.cpp:
(WebCore::LayoutIntegration::layoutWithFormattingContextForBlockInInline):

Canonical link: https://commits.webkit.org/302858@main